test/should-fail/vsgc2003.f3
/**
 * Internal Error if print method invoked with either zero or more than one argument
 * @test/compile-error
 */

var s="s";
print(s, s);
